# 21-PersonnelApi_Logs_Documents/src/controllers/auth.controller.js
@@ -12,6 +12,19 @@ module.exports = {
    //.. Login ;
 
    login: async (req, res) => {
+      /*
+         #swagger.tags = ['Authentication']
+         #swagger.summary = 'Login'
+         #swagger.description = 'Login with username and password'
+         #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema:{
+               username: '*String',
+               password: '*String',
+            }
+         }
+      */
       const { username, password } = req.body;
 
       if (username && password) {
@@ -56,6 +69,12 @@ module.exports = {
    //.. Logout;
 
    logout: async (req, res) => {
+      /*
+         #swagger.tags = ['Authentication']
+         #swagger.summary = 'Logout'
+         #swagger.description = 'Get delete token'
+      */
+
       //, Token Delete ;
       // if (req.user) {
       //    const data = await Token.deleteOne({ userId: req.user._id });
