# 21-PersonnelApi_Logs_Documents/swagger.json
@@ -29,19 +29,26 @@
   "paths": {
     "/auth/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Login",
+        "description": "Login with username and password",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "username": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "*String"
                 },
                 "password": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "*String"
                 }
               }
             }
@@ -56,7 +63,11 @@
     },
     "/auth/logout": {
       "get": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Logout",
+        "description": "Get delete token",
         "responses": {
           "200": {
             "description": "OK"
@@ -605,7 +616,7 @@
             },
             "default": {
               "type": "number",
-              "example": 1730276929511
+              "example": 1730279286153
             }
           }
         }
